<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeToBed</string>
    <string name="hello_world">Hello world!</string>
    <string name="shouting">Shouting...</string>
    <string name="action_settings">Settings</string>
    <string name="mlgb">mlgb</string>
    <string name="start_time">Start Time</string>
    <string name="last_time">Lasts</string>
    <string name="clear_sp">Clear SP</string>
    <string name="startSvc">Start Service</string>
    <string name="callSvc">call service</string>
    <string name="start">Start</string>
    <string name="popping_service">popping service</string>
    <string name="shouting_service">shouting service</string>
    <string name="startAidlSvc">startAidlService</string>
    <string name="callAidlSvc">callAidlService</string>
</resources>
